--- a/_layouts/page-full.html
+++ b/_layouts/page-full.html
@@ -8,11 +8,11 @@ layout: default
   <div class="row">
     <div class="col-md-10 col-md-offset-1 col-xs-12">
       <section>
-        <h1><span class="glyphicon {{page.icon}}"></span> {{page.title}} </h1>
+        <h1><span class="glyphicon {{page.icon}}"></span>{{page.title}} </h1>
         {{ content }}
       </section>
     </div>
   </div>
+  <p class="rss-subscribe text-right">subscribe <a href="{{ " /feed.xml " | prepend: site.baseurl }}">via RSS</a></p>
 
 </div>
-<p class="rss-subscribe">subscribe <a href="{{ " /feed.xml " | prepend: site.baseurl }}">via RSS</a></p>
