--- a/css/custom.css
+++ b/css/custom.css
@@ -15,9 +15,18 @@
     margin: 0 auto;
 }
 
+.wrapper-content{
+    margin-top: -150px;
+    background: #FFFFFF;
+    padding: 6px;
+}
+
 .banner{
     background: transparent url("/img/banner.jpg") no-repeat scroll bottom center / cover;
     margin-top: -20px;
+    z-index: -1;
+    height: 900px;
+    border-bottom: solid 8px #D7D6E4;
 }
 
 .banner-small{
@@ -33,8 +42,8 @@
 }
 
 .jumbotron-inner{
-    background: rgba(0, 0, 0, 0.6);
-    padding: 6px;
+    background: rgba(0, 0, 0, 0.8);
+    padding: 12px;
 }
 
 .bg-footer{
@@ -75,9 +84,23 @@ hr.style2 {
 
 /* */
 .article-image {
-    max-width: 50%;
+    max-width: 43%;
     max-height: 500px;
     float: left;
+    margin: 0 3em 3em 0;
+}
+
+.article-image-full {
+    width: 100%;
+    max-height: 500px;
+    float: left;
+    margin: 0 3em 3em 0;
+}
+
+.article-logo {
+    max-width: 43%;
+    max-height: 100px;
+    float: right;
     margin: 0 3em 3em 0;
 }
 
@@ -93,4 +116,7 @@ hr.style2 {
 .article-thumb {
     max-width: 100%;
     max-height: 300px;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
 }
