--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-md-4">
                 <h3>A propos</h3>
-                <p>{{ site.description }}</p>
+                <p>{{ site.description | markdownify }}</p>
             </div>
             <div class="col-md-4">
                 <h3>Liens</h3>
