--- a/css/custom.css
+++ b/css/custom.css
@@ -25,8 +25,9 @@
     background: transparent url("/img/banner.jpg") no-repeat scroll bottom center / cover;
     margin-top: -20px;
     z-index: -1;
-    height: 900px;
+    min-height: 900px;
     border-bottom: solid 8px #D7D6E4;
+    padding-bottom: 100px;
 }
 
 .banner-small{
