--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <div class="banner banner-small">
 
 </div>
-<div class="wrapper wrapper-content">
+<div class="wrapper wrapper-content-small">
   <div class="row">
     <div class="col-md-8 col-xs-12">
       <section>
