add piwik tracker

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,9 @@
             </div>
             <div class="col-md-4">
                 <h3>Liens</h3>
+                <!-- Piwik Image Tracker-->
+                <img src="http://analytics.xylolink.com/piwik.php?idsite=4&rec=1" style="border:0" alt="" />
+                <!-- End Piwik -->
             </div>
         </div>
         <hr>
@@ -22,4 +25,4 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src={{ "/js/bootstrap.min.js" | prepend: site.baseurl }}></script>
-    </footer>
+</footer>
