--- a/css/main.scss
+++ b/css/main.scss
@@ -2,8 +2,8 @@
 ---
 
 @import 'bootstrap/bootstrap';
-@import 'variables';
-@import 'bootswatch';
+// @import 'variables';
+// @import 'bootswatch';
 @import 'fontawesome/fontawesome';
 @import "fontawesome/solid";
 @import "fontawesome/brands";
@@ -14,7 +14,11 @@ body {
 }
 
 #header-top {
-    background-color: #e6e6e6;
+    background-color: rgba(255,255,255,0);
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #header-bottom {
@@ -23,25 +27,45 @@ body {
     border-bottom: solid 8px #D7D6E4;
 }
 
+.sticky-nav {
+    position: sticky;
+    top: 0px;
+    z-index: 9999;
+}
+
 #header-home {
-    height: 75vh;
-    display: grid;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 55px;
+    height: 85vh;
+    // display: grid;
     border-bottom: solid 8px #D7D6E4;
 }
 
 #top-container {
+    position: relative;
+    margin-top: -75vh;
     h2 {
-        font-family: 'Amatic SC', cursive;
+        display: flex;
+        justify-content: center;
         color: white;
         text-align: center;
         margin: 1em 0;
         font-size: 2em;
-        text-shadow: 0px 0px 20px $black;
+        text-shadow: 0px 0px 20px $black;        
         }
 }
 
+#main-slogan {
+    min-height: 20vh;    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #main-container {
-    background-color: #FFF8DC;
+    position: relative;
+    background-color:  rgba(255,255,255,0.85);
     min-height: 20em;
 }
 
@@ -66,6 +90,7 @@ body {
 }
 
 #page-footer {
+    position: relative;    
     pre {
         color: $gray-400;
     }
