--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,24 +1,9 @@
 ---
-layout: page
+layout: default
 ---
-<div class="text-justify">
-  {{ content }}
-</div>
-<!--
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-  <header class="post-header page-header">
-    <h2 class="post-title" itemprop="name headline">{{ page.title }}
-      <small>
-        <span class="post-meta pull-right">
-          <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
-          {% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
-        </span>
-      </small>
-    </h2>
-  </header>
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
+<div class="row justify-content-center text-justify mt-2">
+  <div class="col-10">
+  {{content}}
   </div>
-</article>
--->
+</div>
