Blog layout with categories

--- a/_layouts/actu.html
+++ b/_layouts/actu.html
@@ -14,8 +14,8 @@ layout: default
             <div class="row">
 
                 <div class="col-md-12">
-                    <span class="badge badge-primary">{% include date.html date=post.date %}</span>
-                    - <span class="badge badge-pill badge-secondary">{{ post.tags | join: ", " }}</span>
+                    <h5><span class="badge badge-info">{{ post.category | capitalize }}</span>
+                    <small><span>{% include date.html date=post.date %}</span></small></h5>
                     <p>{{ post.content }}</p>
                 </div>
 
