--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="col-12">
     <div id="header-top" class="text-center">
         <img src="/img/logo.png"></img>
     </div>    
