--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer id="page-footer" class="bg-dark text-light pt-3">
+<footer id="page-footer" class="bg-dark text-light font-weight-light pt-3">
     <div class="container">
         <div class="row text-center">
             <div class="col-md-4">
