--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,40 +2,69 @@
 <html>
   {% include head.html %}
 
-  <body>
-    {% include header.html %} {% include nav.html %} {%- if page.title == "Xylolink" -%}
+  <body class="row m-0">
+    <!-- {% include header.html %}  -->
+    {% include nav.html %}
+    {%- if page.title == "Xylolink" -%}    
     <div
       id="header-home"
-      class="parallax-bg"
+      class="parallax-bg col-12"
       style="background-image: url({{ site.baseurl }}/img/{%if page.img %}{{page.img}}{%else%}{{"banner.jpg"}}{%endif%});"
-    ></div>
-    
+    ></div>    
     {%- else -%}
     <div 
-        id="header-bottom" class="parallax-bg"
+        id="header-home" 
+        class="parallax-bg col-12"
         style="background-image: url({{ site.baseurl }}/img/{%if page.img %}{{page.img}}{%else%}{{"banner.jpg"}}{%endif%});"
     >
     </div>
     {%- endif -%}
 
-    <div id="top-container">
-      <div class="container py-3">
-        {%- if page.title == "Xylolink" -%}
-        <div id="main-slogan">
-          <h2 class="white-shadow align-text-middle border-bottom">
-            {{ site.slogan }}
-          </h2>
+    <div id="top-container" class="col-lg-5 col-md-12">
+        <div class="container">
+            {%- if page.title == "Xylolink" -%}
+            <div id="main-slogan" class="d-flex align-items-center">
+            <div class="col-12">
+                <img id="title-logo"src="/img/logo2019_light.png"></img>
+                <h1 class="white-shadow col-12 px-0 font-weight-lighter">
+                    {{ site.slogan1 }}
+                </h1>
+                <h2 class="white-shadow col-12 px-0">
+                    {{ site.slogan2 }}
+                </h2>
+            </div>
+            </div>
+            {%- else -%}
+            <div id="page-title" class="d-flex align-items-center">
+                    <div class="col-12">
+                        {%if page.type%}
+                        <h1 class="white-shadow col-12 px-0 font-weight-lighter">
+                                {{ page.type | capitalize }}
+                        </h1>
+                        <h2 class="white-shadow col-12 px-0">
+                                {{page.title}}
+                        </h2>
+                        {%else%}
+                        <h1 class="white-shadow col-12 px-0 font-weight-lighter">
+                                {{ page.title }}
+                        </h1>
+                        {%endif%} 
+                    </div>
+            </div>
+            {% endif %}
         </div>
-        {%- else -%}
-        <h2 class="white-shadow align-text-middle border-bottom">
-          {%if page.type%}{{ page.type | capitalize }}{%else%}{{ page.title }}{%endif%}
-        </h2>
-        {% endif %}
-      </div>
     </div>
-    <div id="main-container" class="container rounded-top pt-5 mb-5">
-      {{ content }}
+    {%-if page.title == 'Xylolink' -%}
+    <div id="main-container" class="col-lg-7 col-md-12">
+        {{ content }}
     </div>
+    {%- else -%}
+    <div id="main-container" class="col-lg-7 col-md-12 p-lg-5 p-md-2">
+        <div id="main-content" class="p-lg-5 p-md-2 rounded-top col-12">
+            {{ content }}
+        </div>
+    </div>
+    {%- endif -%}
 
     {% include footer.html %}
   </body>
