--- a/css/main.scss
+++ b/css/main.scss
@@ -27,8 +27,7 @@ body {
   position: sticky;
   position: -webkit-sticky;
   top: 55px;
-  height: 85vh;
-  // display: grid;
+  height: 100vh;
   border-bottom: solid 8px #d7d6e4;
 }
 
@@ -36,28 +35,43 @@ body {
   position: sticky;
   position: -webkit-sticky;
   top: 55px;
-  height: 75vh;
-  display: grid;
+  height: 50vh;
   border-bottom: solid 8px #d7d6e4;
 }
 
 .sticky-nav {
+  // background-image: url(/img/topography.png);
   position: sticky;
   top: 0px;
-  z-index: 9999;
+  z-index: 10;
 }
 
-.sticky-bg {
-  position: sticky;
-  position: -webkit-sticky;
-  top: 55px;
-  height: 85vh;
-  border-bottom: solid 8px #d7d6e4;
+// .sticky-bg {
+//   position: sticky;
+//   position: -webkit-sticky;
+//   top: 55px;
+//   height: 85vh;
+//   border-bottom: solid 8px #d7d6e4;
+// }
+@include media-breakpoint-down(md) {
+  #top-container {
+    position: relative;
+    margin-top: -100vh;
+  }
 }
 
-#top-container {
-  position: relative;
-  margin-top: -75vh;
+@include media-breakpoint-up(lg) {
+  #top-container {
+    position: sticky;
+    top: 55px;
+    margin-top: -100vh;
+    height: 100%;
+  }
+}
+
+#title-logo {
+  width: 100%;
+  height: auto;
 }
 
 .white-shadow {
@@ -65,14 +79,43 @@ body {
   text-shadow: 0px 0px 20px $black;
 }
 
-#main-slogan {
-  min-height: 20vh;
+.bg-transparent-25 {
+  background-color: rgba(255,255,255,0.75)
 }
 
-#main-container {
-  position: relative;
-  background-color: rgba(255, 255, 255, 0.85);
-  min-height: 20em;
+.bg-dark-50 {
+  background-color: rgba(0,0,0,0.50)
+}
+
+.max-vh-25 {
+  max-height: 25vh;
+}
+
+#main-slogan {
+  min-height: 75vh;
+}
+
+#page-title {
+  min-height: 75vh;
+}
+
+@include media-breakpoint-down(md) {
+  #main-container {
+    position: relative;
+    min-height: 20em;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  #main-container {
+    position: relative;
+    margin-top: -100vh;
+    min-height: 20em;
+  }
+}
+
+#main-content {
+  background-color: rgba(255, 255, 255, 0.87);
 }
 
 .parallax-bg {
@@ -103,9 +146,10 @@ body {
 }
 
 #page-footer {
+  // background-image: url(/img/topography.png);
   position: relative;
   height: 100%;
-  width: 100%; 
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
