--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,9 @@
     >
     </div>
     {%- endif -%}
-
+    {%- if page.title == "Xylolink" -%}
     <div id="top-container" class="col-lg-5 col-md-12">
-        <div class="container">
-            {%- if page.title == "Xylolink" -%}
+        <div class="container">            
             <div id="main-slogan" class="d-flex align-items-center">
             <div class="col-12">
                 <img id="title-logo"src="/img/logo2019_light.png"></img>
@@ -33,34 +32,33 @@
                     {{ site.slogan2 }}
                 </h2>
             </div>
-            </div>
-            {%- else -%}
-            <div id="page-title" class="d-flex align-items-center">
-                    <div class="col-12">
-                        {%if page.type%}
-                        <h1 class="white-shadow col-12 px-0 font-weight-lighter">
-                                {{ page.type | capitalize }}
-                        </h1>
-                        <h2 class="white-shadow col-12 px-0">
-                                {{page.title}}
-                        </h2>
-                        {%else%}
-                        <h1 class="white-shadow col-12 px-0 font-weight-lighter">
-                                {{ page.title }}
-                        </h1>
-                        {%endif%} 
-                    </div>
-            </div>
-            {% endif %}
+            </div>            
         </div>
     </div>
-    {%-if page.title == 'Xylolink' -%}
     <div id="main-container" class="col-lg-7 col-md-12">
-        {{ content }}
+            {{ content }}
     </div>
     {%- else -%}
-    <div id="main-container" class="col-lg-7 col-md-12 p-lg-5 p-md-2">
-        <div id="main-content" class="p-lg-5 p-md-2 rounded-top col-12">
+    <div id="top-container-page" class="col-lg-12 col-md-12">
+        <div id="page-title" class="d-flex align-items-center">
+                <div class="col-12">
+                    {%if page.type%}
+                    <h1 class="white-shadow col-12 px-0 font-weight-lighter">
+                            {{ page.type | capitalize }}
+                    </h1>
+                    <h2 class="white-shadow col-12 px-0">
+                            {{page.title}}
+                    </h2>
+                    {%else%}
+                    <h1 class="white-shadow col-12 px-0 font-weight-lighter">
+                            {{ page.title }}
+                    </h1>
+                    {%endif%} 
+                </div>
+        </div>
+    </div>
+    <div id="main-container-page" class="col-12 p-lg-5 p-md-2 d-flex justify-content-end">
+        <div id="main-content" class="p-lg-5 p-md-2 rounded-top col-lg-9 col-md-12">
             {{ content }}
         </div>
     </div>
