--- a/css/main.scss
+++ b/css/main.scss
@@ -43,7 +43,7 @@ body {
   // background-image: url(/img/topography.png);
   position: sticky;
   top: 0px;
-  z-index: 10;
+  z-index: 100;
 }
 
 // .sticky-bg {
@@ -53,10 +53,11 @@ body {
 //   height: 85vh;
 //   border-bottom: solid 8px #d7d6e4;
 // }
-@include media-breakpoint-down(md) {
+
+@mixin sm-screen {
   #top-container {
     position: relative;
-    margin-top: -100vh;
+    margin-top: -95vh;
   }
   #top-container-page {
     position: relative;
@@ -76,7 +77,7 @@ body {
   }
 }
 
-@include media-breakpoint-up(lg) {
+@mixin md-screen {
   #top-container {
     position: sticky;
     top: 67px;
@@ -104,6 +105,16 @@ body {
   }
 }
 
+@include media-breakpoint-down(md) {
+  @include sm-screen; 
+}
+
+@include media-breakpoint-up(lg){
+  @include md-screen; 
+}
+
+
+
 #title-logo {
   width: 100%;
   height: auto;
@@ -129,17 +140,13 @@ body {
   max-height: 25vh;
 }
 
+.min-h-190px {
+  min-height: 190px;
+}
+
 #main-slogan {
   min-height: 75vh;
 }
-
-
-
-@include media-breakpoint-down(md) {
-
-}
-
-
 
 #main-content {
   background-color: rgba(255, 255, 255, 0.87);
