--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row d-flex justify-content-center">
             <div class="col-sm-12 col-md-10 col-lg-8 text-center">
-                <p>{{ site.description | markdownify }}</p>
+                <p>{{ site.footer | markdownify }}</p>
             </div>
         </div>
         <div class="col-12 text-center">
