--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,18 @@
       "@context": "http://schema.org",
       "@type": "SoftwareApplication",
       "headline": "{{ page.title }}",
-      "description": "{{ page.excerpt }}"
+      "description": "{{ page.excerpt }}",
+      "operatingSystem": "Windows 7, OSX 10.6, Android 1.6",
+      "applicationCategory": "business"
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.xylolink.com/technologies/xylosuite",
+        "availability": "https://schema.org/InStock",
+        "businessFunction": "ProvideService",
+        "seller": {
+          "@type": "Organization",
+          "name": "Xylolink"
+        }
     }
   </script>
 </head>
