--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
       "headline": "{{ page.title }}",
       "description": "{{ page.excerpt }}",
       "operatingSystem": "Windows 7, OSX 10.6, Android 1.6",
-      "applicationCategory": "business"
+      "applicationCategory": "business",
       "offers": {
         "@type": "Offer",
         "url": "https://www.xylolink.com/technologies/xylosuite",
