--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,6 +35,7 @@
         "url": "https://www.xylolink.com/technologies/xylosuite",
         "availability": "https://schema.org/InStock",
         "businessFunction": "ProvideService",
+        "price": "",
         "seller": {
           "@type": "Organization",
           "name": "Xylolink"
