--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,8 @@
         "seller": {
           "@type": "Organization",
           "name": "Xylolink"
-        }
+        },
+        "aggregateRating": ""
       }
     }
   </script>
