--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,7 +40,11 @@
           "@type": "Organization",
           "name": "Xylolink"
         },
-        "aggregateRating": ""
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "5",
+          "reviewCount": "10"
+        },
       }
     }
   </script>
