--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,8 +42,8 @@
         },
         "aggregateRating": {
           "@type": "AggregateRating",
-          "ratingValue": "5",
-          "reviewCount": "10"
+          "ratingValue": "",
+          "reviewCount": ""
         },
       }
     }
