--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
       "description": "{{ page.excerpt }}",
       "operatingSystem": "Windows 7, OSX 10.6, Android 1.6",
       "applicationCategory": "business",
+      "price": "",
       "offers": {
         "@type": "Offer",
         "url": "https://www.xylolink.com/technologies/xylosuite",
@@ -44,7 +45,7 @@
           "@type": "AggregateRating",
           "ratingValue": "",
           "reviewCount": ""
-        },
+        }
       }
     }
   </script>
