--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,22 +30,22 @@
       "description": "{{ page.excerpt }}",
       "operatingSystem": "Windows 7, OSX 10.6, Android 1.6",
       "applicationCategory": "business",
-      "price": "",
       "offers": {
         "@type": "Offer",
         "url": "https://www.xylolink.com/technologies/xylosuite",
         "availability": "https://schema.org/InStock",
         "businessFunction": "ProvideService",
-        "price": "",
+        "price": "154",
+        "priceCurrency": "EUR",
         "seller": {
           "@type": "Organization",
           "name": "Xylolink"
-        },
-        "aggregateRating": {
-          "@type": "AggregateRating",
-          "ratingValue": "",
-          "reviewCount": ""
         }
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "5",
+        "reviewCount": "1"
       }
     }
   </script>
