--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
       "description": "{{ page.excerpt }}",
       "operatingSystem": "Windows 7, OSX 10.6, Android 1.6",
       "applicationCategory": "business",
+      "name": "XyloSuite",
       "offers": {
         "@type": "Offer",
         "url": "https://www.xylolink.com/technologies/xylosuite",
@@ -45,7 +46,8 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "5",
-        "reviewCount": "1"
+        "reviewCount": "1,
+        "name": "XyloSuite",
       }
     }
   </script>
