--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,7 +47,7 @@
         "@type": "AggregateRating",
         "ratingValue": "5",
         "reviewCount": "1,
-        "name": "XyloSuite",
+        "name": "XyloSuite"
       }
     }
   </script>
