--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,7 +46,7 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "5",
-        "reviewCount": "1,
+        "reviewCount": "1",
         "name": "XyloSuite"
       }
     }
