--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,6 +23,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="nav navbar-nav">
                 <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="/img/xylosuite.png" alt="XyloSuite" height="24px"/>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        {% assign sPages = site.xylosuite | sort: 'level' %}
+                        {% for p in sPages %}
+                        <a class="dropdown-item" href="{{ p.url | prepend: site.baseurl }}">{{ p.title }}</a>
+                      {% endfor %}
+                    </div>
+                </li>                
+                <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Nos Services
                   </a>
