--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,7 @@
       'logiciel exploitation forestière, suivi des stocks, informatique forestière, bois, foret, progiciel, cartographie'
     }}"
   />
+  <meta name="Author" content="XyloLink">
 
   <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}" />
 
