--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr-FR" xmlns:og="http://ogp.me/ns#"> 
+<html lang="fr-FR" prefix="og: http://ogp.me/ns#">
   {% include head.html %}
 
   <body class="row m-0" >
