--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,8 +45,8 @@
                 </div>
         </div>
     </div>
-    <div id="main-container-page" class="col-12 p-lg-5 p-md-2 d-flex justify-content-end">
-        <div id="main-content" class="p-lg-5 p-md-2 rounded-top col-lg-9 col-md-12">
+    <div id="main-container-page" class="col-12 py-3 px-1 p-lg-5 p-md-2 d-flex justify-content-end">
+        <div id="main-content" class="py-3 px-0 p-lg-5 p-md-2  prounded-top col-lg-9 col-md-12">
             {{ content }}
         </div>
     </div>
