--- a/css/main.scss
+++ b/css/main.scss
@@ -65,6 +65,10 @@ body {
   height: 36px;
 }
 
+.img-logo-xl {
+  height: 48px;
+}
+
 .xylosuite-title {
   font-family: 'xylosuite title';
   text-align: left;
