--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="row justify-content-center text-justify mt-2">
-  <div class="col-10">
+  <div class="col-11 col-md-10">
   {{content}}
   </div>
 </div>
