design update, new content, debug

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,7 +49,7 @@
       "@context": "http://schema.org",
       "@type": "SoftwareApplication",
       "headline": "{{ page.title }}",
-      "description": "{{ page.excerpt }}",
+      "description": "{{ page.description || page.excerpt }}",
       "operatingSystem": "Windows 7, OSX 10.6, Android 1.6",
       "applicationCategory": "business",
       "name": "XyloSuite",
