--- a/_layouts/actu.html
+++ b/_layouts/actu.html
@@ -3,22 +3,34 @@ layout: default
 ---
 
 <div class="row justify-content-center text-justify mt-2">
-    <div class="col-10">
-        {% assign sorted = (site.actus | sort: 'date') | reverse %} {% for post in sorted %}
-        <article>
-            <h3>
-                {{ post.title }}
-            </h3>
-            <div class="row">
-                <div class="col-md-12">
-                    <h5><span class="badge badge-info">{{ post.category | capitalize }}</span>
-                    <small><span>{% include date.html date=post.date %}</span></small></h5>
-                    <p>{{ post.content }}</p>
-                </div>
+  <div class="col-10">
+    {% assign sorted = (site.actus | sort: 'date') | reverse %} {% for post in sorted %}
+    <article>
+      <a href="{{ post.url | prepend: site.baseurl }}" class="text-dark">
+        <h2>
+          {{ post.title }}
+        </h2>
+      </a>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="d-flex align-items-center justify-content-between flex-wrap">
+            <div class="mr-2 d-flex justify-content-start flex-wrap">
+              {% for tag in post.tags %}
+              <span class="badge badge-info mr-1 my-1 font-weight-normal p-2">{{ tag }}</span>
+              {% endfor %}
             </div>
-        </article>
-        <hr class="style2">
-        {% endfor %}
-    </div>
-
+            <h6 class="m-0 ml-2">
+              <small><span>{% include date.html date=post.date %}</span></small>
+            </h6>
+          </div>
+          <p>{{ post.excerpt }}</p>
+        </div>
+        <div class="col-12 text-right">
+          <a href="{{ post.url | prepend: site.baseurl }}">lire la suite</a>
+        </div>
+      </div>
+    </article>
+    <hr class="style2" />
+    {% endfor %}
+  </div>
 </div>
