--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,14 @@ body {
   min-height: 100vh;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 300
+}
+
+h2, h3, h4 {
+  color: #1B5E20;
+}
+
 #header-top {
   background-color: rgba(255, 255, 255, 0);
   height: 20vh;
@@ -72,6 +80,10 @@ body {
 .xylosuite-title {
   font-family: 'xylosuite title';
   text-align: left;
+}
+
+.style2 {
+  border-top: 1px solid rgba(76,175,80 ,0.5);
 }
 
 @mixin sm-screen {
@@ -210,4 +222,69 @@ body {
   pre {
     color: $gray-400;
   }
+}
+
+/* Share Bar */
+#share-bar {
+  font-size: 1rem;
+}
+
+/* Title */
+
+/* All buttons */
+.share-buttons a:hover {
+  text-decoration: none;
+}
+
+/* Each button */
+.share-button {
+    margin: 0px;
+    margin-bottom: 10px;
+    margin-right: 3px;
+    border: 1px solid #D3D6D2;
+    padding: 5px 10px 5px 10px;
+}
+.share-button:hover {
+    opacity: 1;
+    color: #ffffff;
+}
+
+/* Facebook button */
+.fa-facebook {
+    color: #3b5998;
+}
+.fa-facebook:hover {
+    background-color: #3b5998;
+}
+
+/* Twitter button */
+.fa-twitter {
+    color: #55acee;
+}
+.fa-twitter:hover {
+    background-color: #55acee;
+}
+
+/* Google-PLus button */
+.fa-google-plus {
+    color: #dd4b39;
+}
+.fa-google-plus:hover {
+    background-color: #dd4b39;
+}
+
+/* LinkedIn button */
+.fa-linkedin {
+    color: #007bb5;
+}
+.fa-linkedin:hover {
+    background-color: #007bb5;
+}
+
+/* Email button */
+.fa-envelope {
+    color: #444444;
+}
+.fa-envelope:hover {
+    background-color: #444444;
 }
