--- a/css/main.scss
+++ b/css/main.scss
@@ -10,8 +10,8 @@
 @import 'fontawesome/regular';
 
 @font-face {
-  font-family: "xylosuite title";
-  src: url("/fonts/larabiefont\ rg.ttf");
+  font-family: 'xylosuite title';
+  src: url('/fonts/larabiefont\ rg.ttf');
 }
 
 $font-size-base: 1.05rem !default; // Assumes the browser default, typically `16px`
@@ -22,12 +22,19 @@ body {
   min-height: 100vh;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 300
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 300;
 }
 
-h2, h3, h4 {
-  color: #1B5E20;
+h2,
+h3,
+h4 {
+  color: #1b5e20;
 }
 
 #header-top {
@@ -83,7 +90,56 @@ h2, h3, h4 {
 }
 
 .style2 {
-  border-top: 1px solid rgba(76,175,80 ,0.5);
+  border-top: 1px solid rgba(76, 175, 80, 0.5);
+}
+
+p, strong {
+  > a {
+    text-decoration: underline;
+  }
+}
+
+h3 {
+  a: {
+    color: inherit;
+  }
+  > a:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+    text-decoration: none;
+    color: rgba(76,175,80 ,1) !important;
+  }
+}
+
+a {
+  color: inherit;
+  &:hover {
+    text-decoration: none;
+    h3,
+    h4,
+    h5,
+    div,
+    p,
+    small,
+    ul,
+    li {
+      color: rgba(76,175,80 ,1) !important;
+    }
+    > div:first-child {
+      background-color: rgba(255, 255, 255, 0.3);
+      border-top: 1px solid rgba(76,175,80 ,1);
+      border-bottom: 1px solid rgba(76,175,80 ,1);
+      box-sizing: border-box;
+    }
+  }
+  > div:first-child {
+    border-top: 1px solid rgba(76,175,80 ,0);
+    border-bottom: 1px solid rgba(76,175,80 ,0);
+    box-sizing: border-box;
+    &.divider {
+      border-top: 1px solid rgba(76,175,80 ,0.5);
+      border-bottom: 1px solid rgba(76,175,80 ,0.5);
+    }
+  }
 }
 
 @mixin sm-screen {
@@ -116,7 +172,7 @@ h2, h3, h4 {
     margin-top: -100vh;
     height: 100%;
   }
-  #top-container-page {   
+  #top-container-page {
     position: sticky;
     top: 67px;
     margin-top: -100vh;
@@ -138,14 +194,12 @@ h2, h3, h4 {
 }
 
 @include media-breakpoint-down(md) {
-  @include sm-screen; 
+  @include sm-screen;
 }
 
-@include media-breakpoint-up(lg){
-  @include md-screen; 
+@include media-breakpoint-up(lg) {
+  @include md-screen;
 }
-
-
 
 #title-logo {
   width: 100%;
@@ -158,11 +212,15 @@ h2, h3, h4 {
 }
 
 .bg-transparent-25 {
-  background-color: rgba(255,255,255,0.75)
+  background-color: rgba(255, 255, 255, 0.75);
 }
 
 .bg-dark-50 {
-  background-color: rgba(0,0,0,0.50)
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.bg-dark-75 {
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 .h-90 {
@@ -238,53 +296,53 @@ h2, h3, h4 {
 
 /* Each button */
 .share-button {
-    margin: 0px;
-    margin-bottom: 10px;
-    margin-right: 3px;
-    border: 1px solid #D3D6D2;
-    padding: 5px 10px 5px 10px;
+  margin: 0px;
+  margin-bottom: 10px;
+  margin-right: 3px;
+  border: 1px solid #d3d6d2;
+  padding: 5px 10px 5px 10px;
 }
 .share-button:hover {
-    opacity: 1;
-    color: #ffffff;
+  opacity: 1;
+  color: #ffffff;
 }
 
 /* Facebook button */
 .fa-facebook {
-    color: #3b5998;
+  color: #3b5998;
 }
 .fa-facebook:hover {
-    background-color: #3b5998;
+  background-color: #3b5998;
 }
 
 /* Twitter button */
 .fa-twitter {
-    color: #55acee;
+  color: #55acee;
 }
 .fa-twitter:hover {
-    background-color: #55acee;
+  background-color: #55acee;
 }
 
 /* Google-PLus button */
 .fa-google-plus {
-    color: #dd4b39;
+  color: #dd4b39;
 }
 .fa-google-plus:hover {
-    background-color: #dd4b39;
+  background-color: #dd4b39;
 }
 
 /* LinkedIn button */
 .fa-linkedin {
-    color: #007bb5;
+  color: #007bb5;
 }
 .fa-linkedin:hover {
-    background-color: #007bb5;
+  background-color: #007bb5;
 }
 
 /* Email button */
 .fa-envelope {
-    color: #444444;
+  color: #444444;
 }
 .fa-envelope:hover {
-    background-color: #444444;
+  background-color: #444444;
 }
