add mentions légales

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="col-12 text-center">
-            <pre>{{site.title}} | Powered by <a href="https://jekyllrb.com">Jekyll</a> | Site par <a href="mailto:co%6e&#116;%61&#99;t%40%61&#114;&#114;%61%69&#111;&#108;&#111;%73%2eo%76&#104;">A. Romain</a></pre>
+            <pre>{{site.title}} | Powered by <a href="https://jekyllrb.com">Jekyll</a> | Site par <a href="mailto:co%6e&#116;%61&#99;t%40%61&#114;&#114;%61%69&#111;&#108;&#111;%73%2eo%76&#104;">A. Romain</a> | <a href="/mentions/">Mentions légales</a></pre>
         </div>
     </div >
     <!-- Include all compiled plugins (below), or include individual files as needed -->
