--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div id="main-slogan" class="d-flex align-items-center">
             <div class="col-12">
-                <img id="title-logo"src="/img/logo2019_light.png"></img>
+                <img id="title-logo" alt="logo xylolink" src="/img/logo2019_light.png"></img>
                 <h1 class="white-shadow col-12 px-0 font-weight-lighter">
                     {{ site.slogan1 }}
                 </h1>
