--- a/_includes/tags_list.html
+++ b/_includes/tags_list.html
@@ -1,11 +1,12 @@
 {% if page.collection == 'actus'  %}
 <div class="my-4 d-flex justify-content-between align-items-center w-100 flex-wrap">
-  <div class="mr-2 d-flex justify-content-start ">
-      {% for tag in page.tags %}
-      <span class="badge badge-pill badge-info mr-1 my-1 font-weight-bold p-2">{{ tag }}</span>
-      {% endfor %}
+  <div class="mr-2 d-flex flex-wrap justify-content-star col-8 pl-0 flex-grow-1 mw-100">
+    {% for tag in page.tags %}
+    <span class="badge badge-pill badge-success mr-1 my-1 font-weight-normal">{{ tag }}</span>
+    {% endfor %}
   </div>
-  <div><small>{% include date.html date=page.date %}</small></div>
+  <h6 class="m-0">
+    <small><span>{% include date.html date=page.date %}</span></small>
+  </h6>
 </div>
-
 {% endif %}
