--- a/_layouts/actu.html
+++ b/_layouts/actu.html
@@ -10,24 +10,25 @@ layout: default
         <h2>
           {{ post.title }}
         </h2>
-      </a>
+      </a>      
       <div class="row">
-        <div class="col-md-12">
-          <div class="d-flex align-items-center justify-content-between flex-wrap">
-            <div class="mr-2 d-flex justify-content-start flex-wrap">
+        <div class="col-md-12">         
+          <p>{{ post.excerpt }}</p>
+          <div class="col-12 text-right">
+            <a class="btn btn-outline-primary btn-sm" href="{{ post.url | prepend: site.baseurl }}">lire la suite</a>
+          </div>
+          <div class="d-flex flex-wrap align-items-center justify-content-between">
+            <div class="mr-2 d-flex flex-wrap justify-content-star col-8 pl-0 flex-grow-1 mw-100">
               {% for tag in post.tags %}
-              <span class="badge badge-info mr-1 my-1 font-weight-normal p-2">{{ tag }}</span>
+              <span class="badge badge-info mr-1 my-1 font-weight-normal p-2 ">{{ tag }}</span>
               {% endfor %}
             </div>
             <h6 class="m-0 ml-2">
               <small><span>{% include date.html date=post.date %}</span></small>
             </h6>
           </div>
-          <p>{{ post.excerpt }}</p>
         </div>
-        <div class="col-12 text-right">
-          <a href="{{ post.url | prepend: site.baseurl }}">lire la suite</a>
-        </div>
+        
       </div>
     </article>
     <hr class="style2" />
