--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>{% if page.subtitle %}{{ page.subtitle }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <title>
+    {% if page.subtitle %}{{ page.subtitle }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}
+  </title>
   <meta
     name="description"
     content="{% if page.description %}{{
@@ -31,8 +33,8 @@
       'logiciel exploitation forestière, suivi des stocks, informatique forestière, bois, foret, progiciel, cartographie'
     }}{% endif %}"
   />
-  <meta name="Author" content="XyloLink" />
-
+  <meta name="author" content="{{page.author | default: 'XyloLink'}}" />
+  <meta name="publish_date" content="{{page.date}}"/>
   <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}" />
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
@@ -73,4 +75,33 @@
       }
     }
   </script>
+  <!-- Matomo -->
+  <script>
+    var _paq = (window._paq = window._paq || [])
+    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    _paq.push(['setDoNotTrack', true])
+    _paq.push(['trackPageView'])
+    _paq.push(['enableLinkTracking'])
+    ;(function () {
+      var u = '//matomo.romsys.ovh/'
+      _paq.push(['setTrackerUrl', u + 'matomo.php'])
+      _paq.push(['setSiteId', '1'])
+      var d = document,
+        g = d.createElement('script'),
+        s = d.getElementsByTagName('script')[0]
+      g.async = true
+      g.src = u + 'matomo.js'
+      s.parentNode.insertBefore(g, s)
+    })()
+  </script>
+  <noscript
+    ><p>
+      <img
+        referrerpolicy="no-referrer-when-downgrade"
+        src="//matomo.romsys.ovh/matomo.php?idsite=1&amp;rec=1"
+        style="border: 0"
+        alt=""
+      /></p
+  ></noscript>
+  <!-- End Matomo Code -->
 </head>
