--- a/_includes/share_bar.html
+++ b/_includes/share_bar.html
@@ -17,9 +17,7 @@
         <i class="fab fa-twitter share-button"> </i>
       </a>
       <a
-        href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ site.baseurl }}{{
-          page.url
-        }}&title={{ page.title }}&summary={{ page.description }}&source={{ site.title }}"
+        href="https://www.linkedin.com/sharing/share-offsite/?url={{ site.url }}{{ site.baseurl }}{{page.url}}"
         onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
         title="Partager sur LinkedIn"
       >
