--- a/_layouts/actu.html
+++ b/_layouts/actu.html
@@ -23,9 +23,9 @@ layout: default
               <span class="badge badge-info mr-1 my-1 font-weight-normal p-2 ">{{ tag }}</span>
               {% endfor %}
             </div>
-            <time class="m-0 ml-2" datetime="{{page.date | '%Y-%M-%D'}}">
+            <h6 class="m-0 ml-2">
               <small><span>{% include date.html date=post.date %}</span></small>
-            </time>
+            </h6>
           </div>
         </div>
         
